# longest-word

./: pyproject.toml  requirements.txt  wsgi.py
.github/workflows/: .python-ci.yml
src/longest_word/: game.py
static/: style.css
templates/: check.html
tests/: test_game.py
